# FURP-2025-JunyuWang-Whole-Body-Control-for-a-Mobile-Manipulator-with-QP-Reinforcement-Learning

./: .gitignore  MUJOCO_LOG.TXT  frames_2026-06-27_03.16.58.gv  receiver.py
docs/: 00_weekly.md  README.md
docs/figures/: frames_2026-06-27_04.59.17.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/control/lib/control/: planner
install/control/share/control/: package.sh  package.xml
install/control/share/control/launch/: moveit.launch.py
install/description/lib/my_pkg/: my_node
install/description/share/description/: package.dsv  package.ps1  package.sh  package.xml
install/description/share/description/assets/mujoco/: scene.xml  ur5e.xml
install/description/share/description/assets/urdf/: ur5.urdf
install/description/share/description/assets/xacro/: ur.urdf.xacro  (+1 more)
install/simulation/lib/simulation/: sim
install/simulation/share/simulation/: package.ps1  package.sh  package.xml
install/simulation/share/simulation/launch/: my_launch.launch.py
log/: latest_build
src/: sim.py
src/control/: package.xml  setup.cfg  setup.py
src/control/control/: planner.py
src/control/launch/: moveit.launch.py
src/description/: setup.cfg  setup.py
src/description/description/: objname.py  plan.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/control/share/control/: package.sh  package.xml
src/install/description/share/description/: package.ps1  package.sh  package.xml
src/install/description/share/description/assets/mujoco/: ur5e.xml
src/install/simulation/lib/simulation/: sim
src/install/simulation/share/simulation/: package.ps1  package.sh  package.xml
src/simulation/: package.xml  setup.py
src/simulation/launch/: my_launch.launch.py
src/simulation/simulation/: sim.py
(+23 files in other folders)
