<?xml version="1.0"?>
<?model_implied_schema href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control</name>
  <version>1.0.0</version>
  <description>ROS 2 Python package for controlling the robot</description>
  <maintainer email="scyjw16@nottingham.edu.cn">Junyu Wang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>pymoveit2</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
