<?xml version="1.0"?>
<?model_implied_schema href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>description</name>
  <version>1.0.0</version>
  <description>ROS 2 Python package for loading robot descriptions</description>
  <maintainer email="scyjw16@nottingham.edu.cn">Junyu Wang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>